:memo: add new line

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <div class="text">Hello World</div>
+    <p>bonsoir a tous vous etes tous de tres jolies fleurs</p>
 </body>
 </html>
