--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="text">Hello World</div>
+    <div class="text">Mon texte est pas ouf sry</div>
     <p>bonsoir a tous vous etes tous de tres jolies fleurs</p>
 </body>
 </html>
