Add title on homepage

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <body>
     <div class="text">Soreneeeeeeeeeeeeeuh</div>
     <p>bonsoir a tous vous etes tous de tres jolies fleurs</p>
+
+<h1>A propos</h1>
 </body>
 </html>
